--- a/source/index.html
+++ b/source/index.html
@@ -2,142 +2,142 @@
 <html class="page" lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Функциональное питание для котов «Cat Energy»</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="favicons/apple-touch-icon.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <script src="scripts/index.js" defer></script>
+	<meta charset="UTF-8">
+	<title>Функциональное питание для котов «Cat Energy»</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
+	<link rel="apple-touch-icon" href="favicons/apple-touch-icon.png" />
+	<link rel="manifest" href="manifest.webmanifest" />
+	<script src="scripts/index.js" defer></script>
 </head>
 
 <body class="page__body">
-  <div class="header-hero-wrapper">
-    <!-- Хэдер -->
-    <header class="main-header">
-      <a class="main-header__logo" href="index.html">
-        <img src="" width="33" height="38" alt="Логотип сайта">
-      </a>
-      <img class="main-header__company-name" src="" width="101" height="18" alt="Cat Energy">
-      <nav class="main-header__navigation navigation">
-        <button class="navigation__menu-toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="navigation__list">
-          <li class="navigation__item navigation__item--active">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="#">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+	<div class="header-hero-wrapper">
+		<!-- Хэдер -->
+		<header class="main-header">
+			<a class="main-header__logo" href="index.html">
+				<img src="" width="33" height="38" alt="Логотип сайта">
+			</a>
+			<img class="main-header__company-name" src="" width="101" height="18" alt="Cat Energy">
+			<nav class="main-header__navigation navigation">
+				<button class="navigation__menu-toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+				<ul class="navigation__list">
+					<li class="navigation__item navigation__item--active">
+						<a>
+							Главная
+						</a>
+					</li>
+					<li class="navigation__item">
+						<a href="catalog.html">
+							Каталог продукции
+						</a>
+					</li>
+					<li class="navigation__item">
+						<a href="#">
+							Подбор программы
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-    <!-- Hero -->
-    <section class="hero">
-      <h1 class="hero__title">Функциональное питание для котов</h1>
-      <p class="hero__think-of-cat">Занялся собой? Займись котом!</p>
-      <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-can-desktop@1x.png 1x, images/hero-can-desktop@2x.png 2x" width="552" height="499">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/hero-can-tablet@1x.png 1x, images/hero-can-tablet@2x.png 2x" width="709" height="609">
-        <img class="hero__product-image" src="images/hero-can-mobile@1x.png" srcset="images/hero-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка с едой Cat Energy со вкусом курицы">
-      </picture>
-      <button class="hero__program-button button" type="button">Подобрать программу</button>
-    </section>
-  </div>
+		<!-- Hero -->
+		<section class="hero">
+			<h1 class="hero__title">Функциональное питание для котов</h1>
+			<p class="hero__think-of-cat">Занялся собой? Займись котом!</p>
+			<picture>
+				<source type="image/png" media="(min-width: 1440px)" srcset="images/hero-can-desktop@1x.png 1x, images/hero-can-desktop@2x.png 2x" width="552" height="499">
+				<source type="image/png" media="(min-width: 768px)" srcset="images/hero-can-tablet@1x.png 1x, images/hero-can-tablet@2x.png 2x" width="709" height="609">
+				<img class="hero__product-image" src="images/hero-can-mobile@1x.png" srcset="images/hero-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка с едой Cat Energy со вкусом курицы">
+			</picture>
+			<button class="hero__program-button button" type="button">Подобрать программу</button>
+		</section>
+	</div>
 
-  <!-- Основная часть -->
-  <main class="main-part">
+	<!-- Основная часть -->
+	<main class="main-part">
 
-    <!-- Типы еды -->
-    <section class="food-types">
-      <h2 class="visually-hidden">Варианты питания</h2>
-      <ul class="food-types__list">
-        <li class="food-types__item food-type">
-          <h3 class="food-type__title">Похудение</h3>
-          <p class="food-type__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="food-type__link" href="#">Каталог Slim</a>
-        </li>
-        <li class="food-types__item food-type">
-          <h3 class="food-type__title">Набор массы</h3>
-          <p class="food-type__description">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="food-type__link" href="#">Каталог Pro</a>
-        </li>
-      </ul>
-    </section>
+		<!-- Типы еды -->
+		<section class="food-types">
+			<h2 class="visually-hidden">Варианты питания</h2>
+			<ul class="food-types__list">
+				<li class="food-types__item food-type">
+					<h3 class="food-type__title">Похудение</h3>
+					<p class="food-type__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+					<a class="food-type__link" href="#">Каталог Slim</a>
+				</li>
+				<li class="food-types__item food-type">
+					<h3 class="food-type__title">Набор массы</h3>
+					<p class="food-type__description">
+						Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+					<a class="food-type__link" href="#">Каталог Pro</a>
+				</li>
+			</ul>
+		</section>
 
-    <!-- Особенности -->
-    <section class="features">
-      <h2 class="features__title">Как это работает</h2>
-      <ul class="features__list">
-        <li class="features__item">Функциональное питание содержит только полезные питательные вещества.</li>
-        <li class="features__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-        <li class="features__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-        <li class="features__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-      </ul>
-    </section>
+		<!-- Особенности -->
+		<section class="features">
+			<h2 class="features__title section-heading">Как это работает</h2>
+			<ul class="features__list">
+				<li class="features__item">Функциональное питание содержит только полезные питательные вещества.</li>
+				<li class="features__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+				<li class="features__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+				<li class="features__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+			</ul>
+		</section>
 
-    <!-- Пример -->
-    <section class="example">
-      <h2 class="example__title">Живой пример</h2>
-      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-      <dl class="example__results results">
-        <dt class="results__term">Снижение веса</dt>
-        <dd class="results__definition">5 кг</dd>
-        <dt class="results__term">Затрачено времени</dt>
-        <dd class="results__definition">60 дней</dd>
-      </dl>
-      <p class="example__costs">Затраты на питание: 15 000 руб.</p>
-      <div class="example__comparison comparison-slider">
-        <picture>
-          <source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-before-tablet@1x.png 1x, images/slider-cat-before-tablet@2x.png 2x" width="560" height="512">
-          <img class="comparison-slider__pic comparison-slider__pic--before" src="images/slider-cat-before-mobile@1x.png" srcset="images/slider-cat-before-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота до начала диеты">
-        </picture>
-        <picture>
-          <source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-after-tablet@1x.png 1x, images/slider-cat-after-tablet@2x.png 2x" width="560" height="512">
-          <img class="comparison-slider__pic comparison-slider__pic--after" src="images/slider-cat-after-mobile@1x.png" srcset="images/slider-cat-after-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота после начала диеты">
-        </picture>
+		<!-- Пример -->
+		<section class="example">
+			<h2 class="example__title section-heading">Живой пример</h2>
+			<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+			<dl class="example__results results">
+				<dt class="results__term">Снижение веса</dt>
+				<dd class="results__definition">5 кг</dd>
+				<dt class="results__term">Затрачено времени</dt>
+				<dd class="results__definition">60 дней</dd>
+			</dl>
+			<p class="example__costs">Затраты на питание: 15 000 руб.</p>
+			<div class="example__comparison comparison-slider">
+				<picture>
+					<source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-before-tablet@1x.png 1x, images/slider-cat-before-tablet@2x.png 2x" width="560" height="512">
+					<img class="comparison-slider__pic comparison-slider__pic--before" src="images/slider-cat-before-mobile@1x.png" srcset="images/slider-cat-before-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота до начала диеты">
+				</picture>
+				<picture>
+					<source type="image/png" media="(min-width: 768px)" srcset="images/slider-cat-after-tablet@1x.png 1x, images/slider-cat-after-tablet@2x.png 2x" width="560" height="512">
+					<img class="comparison-slider__pic comparison-slider__pic--after" src="images/slider-cat-after-mobile@1x.png" srcset="images/slider-cat-after-mobile@2x.png 2x" width="280" height="256" alt="Внешность кота после начала диеты">
+				</picture>
 
-        <button class="comparison-slider__toggle" type="button"><span class="visually-hidden">Ползунок для показа "до" и "после"</span></button>
-      </div>
-    </section>
+				<button class="comparison-slider__toggle" type="button"><span class="visually-hidden">Ползунок для показа "до" и "после"</span></button>
+			</div>
+		</section>
 
-    <!-- Местоположение компании -->
-    <section class="company-location">
-      <h2 class="company-location__title">Приглашаем к сотрудничеству дилеров!</h2>
-      <address class="company-location__address company-address">
-        <p class="company-address__street">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="company-address__city">Санкт-Петербург</p>
-      </address>
-      <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
-        <img class="company-location__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с местоположением компании">
-      </picture>
-    </section>
-  </main>
+		<!-- Местоположение компании -->
+		<section class="company-location">
+			<h2 class="company-location__title">Приглашаем к сотрудничеству дилеров!</h2>
+			<address class="company-location__address company-address">
+				<p class="company-address__street">ул. Большая Конюшенная, д. 19/8</p>
+				<p class="company-address__city">Санкт-Петербург</p>
+			</address>
+			<picture>
+				<source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x" width="1440" height="400">
+				<source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x" width="768" height="400">
+				<img class="company-location__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с местоположением компании">
+			</picture>
+		</section>
+	</main>
 
-  <!-- Футер -->
-  <footer class="main-footer">
-    <img class="main-footer__company-name" src="" width="128" height="24" alt="Cat Energy">
-    <ul class="main-footer__social-links social-links">
-      <li class="social-links__item"><a class="social-links__link social-links__link--vk" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Группа во ВКонтакте</span></a></li>
-      <li class="social-links__item"><a class="social-links__link social-links__link--youtube" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Канал на YouTube</span></a></li>
-      <li class="social-links__item"><a class="social-links__link social-links__link--telegram" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Канал в Телеграме</span></a></li>
-    </ul>
-    <a class="main-footer__developer-link" href="#">HTML Academy</a>
-  </footer>
+	<!-- Футер -->
+	<footer class="main-footer">
+		<img class="main-footer__company-name" src="" width="128" height="24" alt="Cat Energy">
+		<ul class="main-footer__social-links social-links">
+			<li class="social-links__item"><a class="social-links__link social-links__link--vk" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Группа во ВКонтакте</span></a></li>
+			<li class="social-links__item"><a class="social-links__link social-links__link--youtube" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Канал на YouTube</span></a></li>
+			<li class="social-links__item"><a class="social-links__link social-links__link--telegram" href="#" target="_blank" rel="noreferrer noopener"><span class="visually-hidden">Канал в Телеграме</span></a></li>
+		</ul>
+		<a class="main-footer__developer-link" href="#">HTML Academy</a>
+	</footer>
 </body>
 
 </html>
